refactor : "CategoryService" - 동적 쿼리 작성